add: rate rest cruds
