# internal/delivery/docs/swagger.yaml
@@ -19,6 +19,28 @@ definitions:
       current_users:
         type: integer
     type: object
+  models.Rate:
+    properties:
+      id:
+        type: integer
+      min_lock_days:
+        type: integer
+      profit:
+        type: integer
+      properties: {}
+      title:
+        type: string
+    type: object
+  models.RateCreate:
+    properties:
+      min_lock_days:
+        type: integer
+      profit:
+        type: integer
+      properties: {}
+      title:
+        type: string
+    type: object
   models.Review:
     properties:
       id:
@@ -40,6 +62,104 @@ definitions:
 info:
   contact: {}
 paths:
+  /rate:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Reviews per page
+        in: query
+        name: per_page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Array
+          schema:
+            items:
+              $ref: '#/definitions/models.Rate'
+            type: array
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      tags:
+      - rate
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.RateCreate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully created
+          schema:
+            type: integer
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      tags:
+      - rate
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.Rate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      tags:
+      - rate
   /static/metrics:
     get:
       consumes:
